[package]
name = "idx-merkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git" }
halo2-base = { version = "=0.4.0", default-features = false }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib.git" }
num-bigint = "0.4.4"
num-traits = "0.2.17"
rand = "0.8.5"
serde = "1.0.193"
ark-std = "0.4.0"
snark-verifier-sdk = "0.1.6"
