[package]
name = "idx-merkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.4"
num-traits = "0.2.17"
rand = "0.8.5"
serde = "1.0.193"
ark-std = "0.4.0"
snark-verifier-sdk = "0.1.6"
halo2-base = "0.4.0"
halo2-ecc = "0.4.0"
pse-poseidon = { git = "https://github.com/aerius-labs/pse-poseidon.git", branch = "feat/stateless-hash" }